objects/ESN_BP_Vote__c.object
<CustomObject>
    <fields>
        <fullName>ESN_BP_Vote_Best_Practice__c</fullName>
        <label>Best Practice</label>
        <referenceTo>ESN_Best_Practice__c</referenceTo>
        <relationshipLabel>Votes</relationshipLabel>
        <relationshipName>Votes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ESN_BP_Vote_Function__c</fullName>
        <formula>ESN_BP_Vote_Best_Practice__r.ESN_BP_Category__c</formula>
        <label>Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_BP_Vote_Unique__c</fullName>
        <label>ESN BP Vote Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ESN_BP_Vote_Value__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Value</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Vote</label>
    <nameField>
        <displayFormat>{YY}{MM}{DD}{000000000}</displayFormat>
        <label>Vote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Votes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>